# library-management-system

./: .gitignore  README.md  api_client.py  api_server.py  main.py  pyproject.toml
client/: admin.py  book_management.py  borrow_return.py  client.py  client.py.backup  user_management.py
database/: books.txt  users.txt
helpers/: paths.py  read_db.py  write_db.py
server/: api_admin.py  api_book_management.py  api_borrow_return.py  api_loan_management.py  api_reports_admin.py  api_user_management.py  app.py
