[project]
name = "Library-Management-System"
version = "2.1.0"
description = "A comprehensive API service for Library Management System with Book Management, User Management, Borrow & Return System and Reports features."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]
